syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package trainTicketService;

option java_package = "ar.edu.itba.pod.grpc.trainTickets";
option java_outer_classname = "TrainTicketServiceModel";
option java_multiple_files = true;

service TrainTicketService {
  rpc GetDestinations(google.protobuf.Empty) returns (Destinations);
  rpc GetTrainsForDestination(google.protobuf.StringValue) returns (stream Train);
  rpc PurchaseTicket(stream Ticket) returns (Reservation);
  rpc GetTicketsForReservations(stream Reservation) returns (stream Ticket);
}

message Destinations {
  repeated string destinations = 1;
}

message Train {
  string id = 1;
  string destination = 2;
  string time = 3;
  int32 available_count = 4;
}

message Ticket {
  string id = 1;
  string trainId = 2;
  string passenger_name = 3;
}

message Reservation {
  string id = 1;
  int32 ticket_count = 2;
}
